test/files/neg/t13089.check
t13089.scala:8: warning: comparing values of types String and T with java.io.Serializable using `==` will always yield false
  def t2 = "" == a // warn
              ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
